# nonlinear_controls

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE  README.md  mainpage.dox  setup.sh  vcpkg.json
.github/workflows/: ci.yml
cmake/: nonlinear_controls-config.cmake.in
examples/: mpc_point_mass.cpp  point_mass.cpp
include/: SE3_control.h  SE3_vblmpc.h  SO3_clf.h  SO3_control.h  SO3_vbl_mpc.hpp  SO3_vblmpc.h  SO3_vblmpc2.hpp  base_control.h  base_controller.h  clf_qp.h  cvxgen_interface.h  data_types.hpp  double_int_mpc.hpp  geometric_control.h  linear_mpc.h  manifolds.h  manifolds.hpp  mpc_base.h  mpc_base2.h  nonlinear_controls.h  orientation_tools.hpp  position_mpc3D.hpp  qp_interface.h  qpoases_eigen.hpp  qpoases_eigen2.hpp  utils.hpp
include/common/: constants.h  cvxgen_interface.h  log.hpp  osqp_eigen.h  qp_interface.h  qpoases_eigen.hpp  qpoases_eigen2.hpp  utils.hpp
include/controls/: SE3_control.h  SE3_vblmpc.h  SO3_clf.h  SO3_control.h  SO3_vblmpc.h  base_control.h  clf_qp.h  clf_qp.hpp  controllers.h  double_int_mpc.hpp  geometric_control.h  linear_mpc.h  linear_mpc.hpp  mpc_epigraph.hpp  mpc_qpoases.hpp  tracking_lmpc.h  tracking_mpc.h
include/data_types/: S2.hpp  SE3.hpp  SO3.hpp  data_types.hpp  manifolds.hpp
include/dynamics/: point_mass.hpp
include/quadprog/: qpswift_eigen.h  quadprog.h
scripts/matlab/: att_traj_sym.m  gains.m  plot_data.m  test_mpc.m  test_mpc.m~
src/: SE3_control.cpp  SE3_vblmpc.cpp  SO3_clf.cpp  SO3_control.cpp  SO3_vblmpc.cpp  base_control.cpp  base_controller.cpp  clf_qp.cpp  geometric_control.cpp  linear_mpc.cpp  main.cpp  mpc_base.cpp  mpc_base2.cpp  qp_interface.cpp  test_nlc.cpp  test_nlc_main.cpp  test_qp.cpp  tracking_lmpc.cpp  tracking_mpc.cpp
src/quadprog/: qpswift_eigen.cpp  quadprog.cpp
tests/: CMakeLists.txt  test_data_types.cpp  test_eigen_structures.cpp  test_linear_mpc.cpp  test_mpc.cpp  test_mpc2.cpp  test_nlc.cpp  test_osqp_mpc.cpp  test_qp.cpp  test_qp_solvers.cpp
